fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -125,7 +125,7 @@ body {
 	list-style: none;
     display: flex;
 	align-items: center;
-	gap: 0.6vw;
+	gap: 0.4vw;
 	margin: 0;
 	padding-right: 1em;
 	padding-left: 1em;
@@ -150,6 +150,11 @@ body {
     background: var(--color-white-opacity1);
 }
 
+@media (min-width: 400px) {
+	.navbar-list {
+		gap: 0.6vw;
+	}
+}
 
 /* Content */
 .content {
